Changed Flights text colors

--- a/index.html
+++ b/index.html
@@ -22,12 +22,6 @@
   <div class="header">
     
         <ul class="menu">   
-            
-            <!-- <img class="logo"src="air.jpg"></img>
-            <a href="#1"style="color:black"><li>Home</li></a>
-            <a href="#2" style="color:black">Flights</li></a>
-            <a href="#3"style="color:black">News Letter</li></a>
-            <a href="#4"style="color:black"><li class="Contact">Contact us</li></a> -->
             <img class="logo"src="air.jpg"></img>
             <a href="#1" style="color:black"><li>Home</li></a>
             <a href="#2" style="color:black"><li>Flights</li></a>
@@ -42,12 +36,12 @@
 
 <center><b style"color: black;">C H E C K-I N  F L I G H T S </b></center><br>
 <div id =2 class="grid-wrapper">
-    <div class="box"><img src="air1.jpg" alt=""><ul><li style="color:red">Aurangabad to USA:12:00-23:00</li></ul></div>
-    <div class="box"><img src="air5.jpg" alt=""><ul><li style="color:red">Japan to Brazil:12:00-22:00</li></ul></div>
-    <div class="box"><img src="download.jpg" alt=""><ul><li style="color:red">USA to Argentina:12:00-17:00</li></ul></div>
-    <div class="box"><img src="air4.jpg" alt=""><ul><li style="color:red">Dubai to Ireq:9:00-23:00</li></ul></div>
-    <div class="box"><img src="air6.jpg" alt=""><ul><li style="color:red">DELAYED </li></ul></div>
-    <div class="box"><img src="air7.jpg" alt=""><ul><li style="color:red">Manchester to New Castle:11:00-13:00</li></ul></div>
+    <div class="box"><img src="air1.jpg" alt=""><ul><li style="color:rgb(0, 162, 255)">Aurangabad to USA:12:00-23:00</li></ul></div>
+    <div class="box"><img src="air5.jpg" alt=""><ul><li style="color:rgb(0, 162, 255)">Japan to Brazil:12:00-22:00</li></ul></div>
+    <div class="box"><img src="download.jpg" alt=""><ul><li style="color:rgb(0, 162, 255)">USA to Argentina:12:00-17:00</li></ul></div>
+    <div class="box"><img src="air4.jpg" alt=""><ul><li style="color:rgb(0, 162, 255)">Dubai to Ireq:9:00-23:00</li></ul></div>
+    <div class="box"><img src="air6.jpg" alt=""><ul><li style="color:rgb(0, 162, 255)">DELAYED </li></ul></div>
+    <div class="box"><img src="air7.jpg" alt=""><ul><li style="color:rgb(0, 162, 255)">Manchester to New Castle:11:00-13:00</li></ul></div>
 </div>
 <br>
 <section id=3 class="newsletter">
