--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <!-- css ref -->
         <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Check-in AirPlanes!</title>
 </head>
 <body>
   <div class="header">
